@@ -1,9 +1,10 @@
-$Id: ChangeLog,v 1.53 2008/10/05 20:07:56 tho Exp $
+$Id: ChangeLog,v 1.54 2008/10/06 12:35:37 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
 	- [misc] u_atoi fix
+	- [misc] u_strtok added
 
 LibU 1.3.0:
 	- [config] u_config_sort_children added
